# prnotify

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: feedback.rs  main.rs  settings.rs  util.rs
src/clients/: cache.rs  github.rs  mod.rs  ntfy.rs
