[package]
name = "prnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = "0.13.3"
directories = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.8.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
shellexpand = "3.1.0"
tokio = { version = "1", features = ["full"] }
